refactor: some constructor adjustments